--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Poppins&family=Waiting+for+the+Sunrise&display=swap');
 .App {
   text-align: center;
 }
@@ -30,6 +31,7 @@
 
 img{
   margin: 3%;
+  
 
 }
 .bob {
@@ -45,4 +47,47 @@ img{
   padding: 15px;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 50px;
+}
+.typewriter p {
+  
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
+}
+.nig{
+  font-family: 'Nanum Pen Script', cursive;
+  font-size:23px;
+  
+
+;
+}.conainer {
+
+  display: flex;
+  place-content: center;
+  place-items: center;
+  overflow: hidden;
+  background: rgba(178, 178, 178, 0.2);
+  border-radius: 30px;
+}
+
+.items {
+  width: 150px;
+  height: 150px;
+  background: rgb(97, 18, 18);
+  border-radius: inherit;
 }
