--- a/src/components/device view/icon.scss
+++ b/src/components/device view/icon.scss
@@ -1,6 +1,6 @@
 .icons8-fuel {
     border: none;
-    margin-right: 20px;
+    margin: 10%;
     background: none;
     padding: 0%;
     cursor: pointer;
@@ -13,6 +13,7 @@
 
 .icons8-comments {
     border: none;
+    margin: 10%;
     background: none;
     padding: 0%;
     cursor: pointer;
@@ -32,6 +33,7 @@
 }
 
 .icons8-hyperlink {
+
     display: inline-block;
     width: 50px;
     height: 50px;
@@ -54,4 +56,20 @@
 
 button:focus {
     outline: 0;
+}
+
+.iconss{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+@media (max-width:"930px") {
+    .iconss{    flex-direction: row;
+    display: block;}
+    .icons8-comments,.icons8-fuel{
+        margin: 4%;
+    }
+    
+
 }
