--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -3,5 +3,28 @@
     border-top:0px ;
     background-repeat: no-repeat;
     width: 100%;
-    height: 1000px;
+padding-bottom: 23%;
+}
+.projfo{
+    color: aliceblue;
+    display: flex;
+}
+.projf{
+    display: flex;
+    color: #A5A7A7;
+}
+.footerss{
+   margin-left: 30%;
+   margin-right: 30%;
+}
+.ddd{
+    margin-top: 10%;
+}
+.footerss img{
+    margin: 18px;
+}
+@media (max-width:950px) {
+    .footerss img{
+        margin: 3px;
+    }
 }
